fix: atualizando a logica de negocio para o usuario nao mandar nulo